fix(themes): IE11 fixes for grid and calendar
Fix for grid not displaying header and footer in IE11. Fix for calendar
not displaying body content in IE11.

--- a/src/core/styles/components/calendar/_calendar-theme.scss
+++ b/src/core/styles/components/calendar/_calendar-theme.scss
@@ -281,7 +281,7 @@ $components: register-component($components, #{$component-name});
     }
 
     %cal-body-display {
-        flex: 1;
+        flex: 1 0 auto;
         padding-top: $cal-picker-padding;
         padding-bottom: $cal-picker-padding;
         overflow: hidden;
