feat(themes): paginator structural styling added

--- a/src/core/styles/themes/_core.scss
+++ b/src/core/styles/themes/_core.scss
@@ -25,6 +25,7 @@
 @import '../components/list/list-component';
 @import '../components/navbar/navbar-component';
 @import '../components/navdrawer/navdrawer-component';
+@import '../components/paginator/paginator-component';
 @import '../components/progress/progress-component';
 @import '../components/radio/radio-component';
 @import '../components/ripple/ripple-component';
