Exposing "dirty" prop in template context so that components can clear their state of neccessart when new data is loaded into the view.

--- a/src/grid/grid.component.html
+++ b/src/grid/grid.component.html
@@ -35,8 +35,9 @@
                                 [igxForScrollOrientation]="'vertical'"
                                 [igxForContainerSize]='calcHeight'
                                 [igxForItemSize]="rowHeight"
+                                 let-dirty="dirty"
                                 #scrollContainer>
-           <igx-grid-row [gridID]="id" [index]="rowIndex" [rowData]="rowData">
+           <igx-grid-row [gridID]="id" [index]="rowIndex" [rowData]="rowData" [isDirty]="dirty">
            </igx-grid-row>
         </ng-template>
 </div>
